# MimIR

./: .clang-format  .gitignore  .gitmodules  .mailmap  .pre-commit-config.yaml  .style.yapf  CLAUDE.md  CMakeLists.txt  Makefile
.github/: copilot-instructions.md
.github/instructions/: cpp-style.instructions.md  mim-style.instructions.md
.github/workflows/: doxygen.yml  linux.yml  macos.yml  windows.yml
cmake/: Mim.cmake  MimPyInstallWheel.cmake
docs/: CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml.in  README.md  coding.md  deploy.py  dev.md  header.html  phases.md  plugins.md  python.md  rewriting.md  version-switcher.css  version-switcher.js
examples/: CMakeLists.txt  hello.cpp  poly.cpp  regex.py  sccp_analysis.cpp  sccp_main.cpp  sccp_transform.cpp
gtest/: CMakeCache.txt  automaton.cpp  restricted_dep_types.cpp  test.cpp
include/automaton/: range_helper.h
include/mim/: axm.h  config.h.in  def.h  driver.h  flags.h  nest.h  pass.h  phase.h  plugin.h  rewrite.h  rule.h  schedule.h  world.h
lit/: CMakeLists.txt  annex.mim  arr_pack_performance.mim  beta_equiv.mim  bndr_as_expr.mim  commute.mim  ext_names.mim  fib.mim  fun.mim  group.mim  lam_body_sigma.mim  lam_var.mim  let_ptrn.mim  lit.cfg.py  lit.site.cfg.py.in  llvm_array_ext.mim  main_loop.mim  mim_sh_test.py  multi-index.mim  pack.mim  pow_pe.mim  prec.mim  ptrn.mim  rec.mim  rec_pi.mim  recursive_uniform_bug.mim  restructre_free_var.mim  ret_argc.mim  sigma.mim  str.mim  type_infer.mim  union.mim
lit/affine/: affine_index.mim  affine_index_symbolic.mim  dynamic_for.mim  for_1acc.mim  for_2acc.mim  for_2acc_2types.mim  for_2acc_real.mim  for_over_mem.mim
lit/autodiff/: autodiff_mult_in_call.mim  autodiff_mult_in_call2.mim  autodiff_mult_in_call2_2.mim  autodiff_mult_in_call2_3.mim  autodiff_mult_in_call_cont.mim  call_autodiff.mim  call_autodiff_cont.mim  id_autodiff.mim  id_autodiff_info_out.mim  id_autodiff_mult_in.mim  id_autodiff_mult_in_mem.mim  id_autodiff_mult_in_mult.mim  id_autodiff_mult_in_mult2.mim  multiply2_autodiff.mim  multiply_autodiff.mim  multiply_autodiff_cond.mim  multiply_autodiff_cond2.mim  simple_autodiff.mim  square.mim  square_autodiff.mim
lit/bug/: pack_not_closed.mim  parser_bug_id_id_lit_in_implicit.mim
lit/clos/: array.mim  bind.mim  loopDiff.mim  loopDiff2.mim  loopDiffSave.mim  loopError.mim  malloc.mim  no_mem_lazy.mim  pass_through_return.mim  recursiveLoop.mim  return_cont_in_closure.mim  return_higher_order4.mim  using_c_function.mim
lit/compile/: id.mim  opt.mim  two_phase.mim  unused.mim
lit/core/: 1tuple.mim  fold.mim  icmp.mim  idx.mim  nat.mim  normalize_add.mim  normalize_and_ff.mim  normalize_and_ff_tt.mim  normalize_and_icmps.mim  normalize_and_icmps_lit.mim  normalize_and_tree.mim  normalize_and_tt.mim  normalize_and_tt_tt.mim  normalize_bitcast.mim  normalize_icmp.mim  pow.mim  reassociate.mim  ret_add.mim  ret_and.mim  ret_lshr.mim  ret_nand.mim  sub_bug.mim  unary_tuple.mim  wrap.mim
lit/demo/: const.mim
lit/direct/: ds2cps.mim  ds2cps_ax_cps2ds.mim  ds2cps_ax_cps2ds_dependent2.mim  ds2cps_ax_cps2ds_twice.mim  ds2cps_ax_cps2ds_twice_diff.mim  ds2cps_cps_only.mim  ds2cps_mixed.mim  ds2cps_mixed2.mim  ds2cps_mixed_tuple.mim  ds_dependent.mim  ds_external_cimp.mim  ds_external_cimp_translated.mim  mut_dom_bug.mim
lit/eqsat/: rebuild_fib.mim  rebuild_union.mim  rebuild_var.mim  rewrite_core_vars.mim  slotted_config.mim
lit/error/: annex.mim  domain.mim  double_extern_lam.mim  index_nat.mim  pi_redef.mim  unsupported_rec.mim  var.mim
lit/gpu/: array_kernel.mim  dyn_smem_kernel.mim  generic_kernel.mim  manual_streams.mim  manual_sync_kernel.mim  no_arg_kernel.mim  scope_sync_kernel.mim  simple_kernel.mim  two_arg_kernel.mim
lit/math/: exp.mim  fold.mim  infer.mim  normalize_fastmath.mim  tri.mim
lit/matrix/: get_shape.mim  init.mim  init_const_no_ret.mim  init_no_ret.mim  map_reduce.mim  map_reduce_mult.mim  map_reduce_mult_init.mim  map_reduce_mult_init_ret.mim  map_reduce_zip_add.mim  print_const.mim  print_const_dyn_mat.mim  print_const_prod.mim  print_id_mat.mim  print_prod2.mim  read_const.mim  read_mat2.mim  read_transpose.mim  read_transpose_run.mim  test_write.mim  transpose_init.mim
lit/mem/: add_top_mem.mim  add_top_mem2.mim  alloc.mim  alloc_load_store.mim  arg_style.mim  largeArr.mim  malloc_load_store.mim  mslot_load_store.mim  no_mem.mim  no_mem_lazy.mim  slot_load_store.mim  two_fun_mem.mim  two_fun_no_mem.mim
lit/mytest/: const.mim
lit/nesting/: paper_b.mim  paper_c.mim
lit/opt/: default.mim
lit/ord/: fold.mim  loop.mim  normalize.mim  poly.mim
lit/refly/: debug.mim  debug_perm.mim  equiv.mim  refine.mim
lit/regex/: disj.mim  disj_any_empty_fold.mim  disj_lits.mim  disj_lits_fold_d.mim  disj_lits_fold_w.mim  dont_compile.mim  flatten_disj.mim  fold_0to0_to_0.mim  fold_0to8_to_range.mim  fold_0to9_to_d.mim  fold_azAZ_09_to_w.mim  fold_conj_empty.mim  fold_conj_range_empty.mim  fold_disj_to_s.mim  fold_disjs.mim  fold_optional_optional.mim  fold_optional_plus.mim  fold_optional_star.mim  fold_plus_optional.mim  fold_plus_plus.mim  fold_plus_star.mim  fold_ranges_lits.mim  fold_star_optional.mim  fold_star_plus.mim  fold_star_star.mim  match_1or5or9.mim  match_a_notbc_d.mim  match_any.mim  match_any_empty.mim  match_conj_empty.mim  match_empty.mim  match_lit.mim  match_w.mim  (+18 more)
mim_py/: benchmarks_v2.py  pyproject.toml  test.py
py/: CMakeLists.txt  pyproject.toml
py/bindings/: CMakeLists.txt  ast.cpp  def.cpp  driver.cpp  error.cpp  flags.cpp  lam.cpp  log.cpp  parser.cpp  py.cpp  sym.cpp  tuple.cpp  world.cpp
py/src/mim/: __init__.py  __init__.pyi  callable.py  core.py  jit.py  plugin.py  regex.py
py/src/mim/plug/: __init__.py  regex.py
py/tests/: call.py  conftest.py  defs.py  driver.py  jit.py  pytest.py  regex.py  regex_example.py  run_tests.py  test_regex_example.py  test_smoke.py  world.py
scripts/: checkout.sh  extract_plugin.py  make_gtest_error.sh  make_lit_error.sh  new_plugin.py  plugin_utils.py  probe.sh  xdot.gdb
src/mim/py/: CMakeLists.txt  def.cpp  driver.cpp  flags.cpp  py.cpp  world.cpp
(+181 files in other folders)
