[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mim"
version = "0.1.0"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mim = ["*.so", "*.pyd", "*.dll", "*.pyi", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*.py"]
markers = [
    "slow: marks slow end-to-end tests",
    "needs_clang: requires clang on PATH",
]
